# aeterna

./: .dockerignore  .editorconfig  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .rustfmt.toml  404.html  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CHARTER.md  CLA.md  CLAUDE.md  CODESEARCH_INTEGRATION_COMPLETE.md  CODESEARCH_REPO_MANAGEMENT_SUMMARY.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.admin-ui  GREPAI_INTEGRATION_COMPLETE.md  GREPAI_INTEGRATION_STATUS.md  GREPAI_REPO_MANAGEMENT_SUMMARY.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  INSTALL.md  LICENSE  Makefile  PHASES_1-8_COMPLETE.md  PRODUCTION_GAPS.md  README.md  aeterna-0.4.1-bootstrap.2.tgz  aeterna-0.8.0-rc.1.tgz  aeterna-0.8.0-rc.10.tgz  aeterna-0.8.0-rc.11.tgz  aeterna-0.8.0-rc.12.tgz  aeterna-0.8.0-rc.2.tgz  aeterna-0.8.0-rc.3.tgz  aeterna-0.8.0-rc.4.tgz  aeterna-0.8.0-rc.5.tgz  (+30 more)
adapters/: Cargo.toml  README.md
adapters/opencode/: README.md
adapters/policies/: cedar.cedarschema
adapters/src/: ecosystem.rs  hooks.rs  langchain.rs  lib.rs  opencode.rs
adapters/tests/: auth_integration.rs  cedar_integration.rs  cedar_role_assignment_test.rs  langchain_integration.rs  rbac_matrix_doc_test.rs  rbac_matrix_test.rs
agent-a2a/: Cargo.toml  README.md
agent-a2a/src/: auth.rs  config.rs  errors.rs  lib.rs  main.rs  sdk_abstraction.rs  telemetry.rs
agent-a2a/tests/: a2a_test.rs
backup/: Cargo.toml
backup/src/: archive.rs  checksum.rs  destination.rs  error.rs  lib.rs  manifest.rs  ndjson.rs  s3.rs  validate.rs
cli/: Cargo.toml  opencode.jsonc
cli/.aeterna/: context.toml
cli/src/: backend.rs  client.rs  credentials.rs  env_vars.rs  exit_code.rs  lib.rs  main.rs  offline.rs  output.rs  profile.rs  secret_input.rs  ux_error.rs
cli/tests/: cli_e2e_test.rs  init_command_test.rs  policy_role_catalog_test.rs  server_runtime_test.rs  setup_and_codesearch_e2e_test.rs  tenant_provisioning_consistency_cli_test.rs  tenant_provisioning_consistency_test.rs
config/: Cargo.toml
config/src/: cca.rs  config.rs  file_loader.rs  hot_reload.rs  lib.rs  loader.rs  precedence.rs  validator.rs
context/: Cargo.toml
context/src/: cedar.rs  lib.rs  migration.rs  resolver.rs  types.rs
cross-tests/: Cargo.toml
cross-tests/tests/: drill_automation.rs  memory_throughput.rs  phase1_ha.rs  phase1_observability.rs  phase2_scaling.rs  phase3_ai.rs
idp-sync/: Cargo.toml
idp-sync/src/: azure.rs  config.rs  error.rs  github.rs  lib.rs  okta.rs  scheduler.rs  sync.rs  webhook.rs
idp-sync/tests/: github_test.rs  test_helpers.rs  test_rsa_key.pem
knowledge/: Cargo.toml
knowledge/src/: api.rs  durable_events.rs  federation.rs  git_provider.rs  governance.rs  governance_client.rs  lib.rs  manager.rs  pr_proposal_storage.rs  repository.rs  resolver.rs  scheduler.rs  telemetry.rs  tenant_repo_resolver.rs
knowledge/tests/: api_test.rs  budget_integration.rs  drift_detection_test.rs  event_reliability_test.rs  governance_inheritance_test.rs  hindsight_integration.rs  promotion_lifecycle_test.rs  resolver_precedence_test.rs  rlm_assembly_test.rs  scheduler_test.rs
memory/: Cargo.toml
memory/src/: active_learning.rs  audio_memory.rs  circuit_breaker.rs  cold_tier.rs  decay.rs  embedding_cache.rs  embedding_cache_redis.rs  error.rs  few_shot.rs  governance.rs  image_memory.rs  json_utils.rs  lib.rs  manager.rs  matryoshka.rs  moa.rs  multi_hop.rs  provider_registry.rs  providers.rs  pruning.rs  reasoning.rs  reasoning_cache.rs  secret_resolver.rs  telemetry.rs  trainer.rs  video_memory.rs
memory/tests/: backends_benchmark.rs  backends_databricks_test.rs  backends_e2e_test.rs  backends_mongodb_test.rs  backends_pgvector_test.rs  backends_pinecone_test.rs  backends_qdrant_test.rs  backends_vertex_ai_test.rs  backends_weaviate_test.rs  bootstrap_integration.rs  combined_training_integration.rs  complexity_proptest.rs  embedding_google_e2e_test.rs  graph_integration.rs  llm_google_e2e_test.rs  promotion_chain_integration.rs  qdrant_testcontainers.rs  reasoning_tests.rs  reward_mutation_tests.rs  rlm_graph_integration.rs  routing_integration.rs  summary_integration.rs  system_integration.rs  vertex_ai_pipeline_e2e_test.rs
mk_core/: Cargo.toml
mk_core/src/: env.rs  hints.rs  lib.rs  pagination.rs  secret.rs  traits.rs  types.rs
observability/: Cargo.toml
observability/src/: anomaly_detection.rs  cost_dashboard.rs  cost_tracking.rs  lib.rs  slo.rs  trace_correlation.rs
opal-fetcher/: .dockerignore  Cargo.toml  Dockerfile
opal-fetcher/src/: entities.rs  error.rs  handlers.rs  idp_sync.rs  lib.rs  listener.rs  main.rs  routes.rs  server.rs  state.rs  websocket.rs
opal-fetcher/tests/: tenant_isolation_test.rs
services/memory/: Cargo.toml
storage/: Cargo.toml
storage/benches/: graph_pool_bench.rs
storage/migrations/: 001_create_extensions.sql  002_create_organizational_units.sql  003_create_memory_tables.sql  004_enable_rls.sql  005_drift_tuning.sql  006_event_streaming.sql  007_cca_summaries.sql  008_hindsight_tables.sql  009_organizational_referential.sql  010_governance_workflow.sql  011_meta_governance.sql  012_decomposition_weights.sql  013_referential_integrity.sql  014_grepai_repo_management.sql  015_add_device_id_to_memory.sql  016_governance_rls.sql  017_tenants_tables.sql  018_add_last_accessed_at.sql  019_day2_operations_tables.sql  020_fix_codesearch_views.sql  021_add_user_idp_columns.sql  022_drop_dead_vector_columns.sql  023_platform_admin_impersonation.sql  024_normalize_rls_session_variables.sql  025_add_app_roles.sql  026_tenant_secrets.sql  027_tenant_manifest_state.sql  028_tenant_scoped_hierarchy.sql  029_agents_tenant_scope.sql  030_audit_context.sql  030_idp_external_ids.sql  031_provisioning_idempotency.sql  032_tenant_delete_cascade.sql  033_tenant_legal_entity.sql  034_graph_events.sql  035_organizational_units_timestamps.sql  036_accounts.sql  037_organizations_tenant_root.sql  038_tenant_root_views.sql  039_drop_company_root.sql  (+2 more)
sync/: Cargo.toml  README.md
testing/: Cargo.toml
tools/: Cargo.toml  README.md
utils/: Cargo.toml
(+1712 files in other folders)
