[workspace]
resolver = "2"
members = [
    "mk_core",
    "memory",
    "knowledge",
    "sync",
    "tools",
    "adapters",
    "storage",
    "config",
    "utils",
    "errors"
]

[workspace.lints.rust]
unused_imports = "warn"
dead_code = "allow"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin)', 'cfg(tarpaulin_include)'] }

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unsafe_code = "deny"

[workspace.dependencies]
# Local workspace crates
mk_core = { path = "./mk_core" }
memory = { path = "./memory" }
knowledge = { path = "./knowledge" }
sync = { path = "./sync" }
tools = { path = "./tools" }
adapters = { path = "./adapters" }
storage = { path = "./storage" }
config = { path = "./config" }
utils = { path = "./utils" }
errors = { path = "./errors" }

# Shared dependencies across all crates
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.17"
anyhow = "1.0"
tokio = { version = "1.35", features = ["full"] }
uuid = { version = "1.6", features = ["serde", "v4"] }
sha2 = "0.10"
notify = "8.2.0"
tempfile = "3.9"
serde_yaml = "0.9"
toml = "0.9.10"
tracing = { version = "0.1", features = ["log"] }
validator = { version = "0.20.0", features = ["derive"] }
schemars = { version = "0.8" }
async-trait = "0.1"
wiremock = "0.6"
git2 = "0.20.3"
walkdir = "2.4"
strum = { version = "0.26", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
cedar-policy = "4.3"
redis = { version = "1.0.2", features = ["tokio-comp", "json", "connection-manager"] }
regex = "1.10"
metrics = { version = "0.21" }
metrics-exporter-prometheus = { version = "0.12" }

[workspace.metadata.tarpaulin]
all-features = true
workspace = true
timeout = "120"
out = ["Html", "Json"]

[workspace.metadata.mutants]
timeout = 30
jobs = 4
