[workspace]
resolver = "2"
members = [
    "mk_core",
    "memory",
    "knowledge",
    "sync",
    "tools",
    "adapters",
    "storage",
    "config",
    "utils",
    "errors",
    "agent-a2a",
    "context",
    "cli",
    "opal-fetcher",
    "testing",
    "idp-sync",
    "observability",
    "cross-tests",
]

[workspace.lints.rust]
unused_imports = "warn"
dead_code = "allow"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin)', 'cfg(tarpaulin_include)'] }

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Allow these specific warnings - they are documentation-style issues that don't affect functionality
missing-panics-doc = "allow"
missing-errors-doc = "allow"
must-use-candidate = "allow"
doc-markdown = "allow"
collapsible-if = "allow"
unused-self = "allow"
assigning-clones = "allow"
unwrap-or-default = "allow"
match-same-arms = "allow"
too-many-arguments = "allow"
derivable-impls = "allow"
io-other-error = "allow"
manual-is-multiple-of = "allow"
manual-clamp = "allow"
unnecessary-get-then-check = "allow"
async-yields-async = "allow"
empty-line-after-outer-attr = "allow"
regex-creation-in-loops = "allow"

[workspace.dependencies]
# Local workspace crates
mk_core = { path = "./mk_core" }
memory = { path = "./memory" }
knowledge = { path = "./knowledge" }
sync = { path = "./sync" }
tools = { path = "./tools" }
adapters = { path = "./adapters" }
storage = { path = "./storage" }
config = { path = "./config" }
utils = { path = "./utils" }
errors = { path = "./errors" }
context = { path = "./context" }
opal-fetcher = { path = "./opal-fetcher" }
testing = { path = "./testing" }

# Shared dependencies across all crates
reqwest = { version = "0.13.1", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.17"
anyhow = "1.0"
tokio = { version = "1.35", features = ["full"] }
uuid = { version = "1.6", features = ["serde", "v4"] }
sha2 = "0.10"
notify = "8.2.0"
tempfile = "3.9"
serde_yaml = "0.9"
toml = "0.9.10"
tracing = { version = "0.1", features = ["log"] }
validator = { version = "0.20.0", features = ["derive"] }
schemars = { version = "1.2.0", features = ["chrono04"] }
async-trait = "0.1"
wiremock = "0.6"
git2 = "0.20.3"
walkdir = "2.4"
strum = { version = "0.27.2", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
cedar-policy = "4.3"
utoipa = { version = "5.3", features = ["chrono", "uuid"] }
redis = { version = "1.0.2", features = ["tokio-comp", "json", "connection-manager"] }
regex = "1.10"
serial_test = "3.2"
testcontainers = "0.26"
testcontainers-modules = "0.14"
metrics = { version = "0.24.3" }
metrics-exporter-prometheus = { version = "0.18.1" }
metrics-util = { version = "0.20.1" }
metrics-opentelemetry = { version = "0.18.0" }
sqlx = { version = "0.9.0-alpha.1", features = ["postgres", "runtime-tokio", "tls-native-tls", "json", "uuid", "chrono"] }
distributed-lock = { version = "0.2", features = ["redis", "postgres"] }
xxhash-rust = { version = "0.8", features = ["xxh64"] }
dashmap = "6.1"
tokio-retry = "0.3"
backoff = { version = "0.4", features = ["tokio"] }
statig = { version = "0.4.1", features = ["async"] }
# A2A/Agent dependencies
radkit = "=0.0.4"
a2a-types = "0.1"
parking_lot = "0.12"
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
futures-util = "0.3"

[workspace.metadata.tarpaulin]
all-features = true
workspace = true
timeout = "120"
out = ["Html", "Json"]
exclude-files = ["tests/*", "**/tests/*", "**/tests.rs"]

[workspace.metadata.mutants]
timeout = 30
jobs = 4
