[workspace]
resolver = "2"
members = [
    "mk_core",
    "memory",
    "knowledge",
    "sync",
    "tools",
    "adapters",
    "storage",
    "config",
    "utils",
    "errors",
    "agent-a2a",
    "context",
    "cli",
    "opal-fetcher",
    "testing",
    "idp-sync",
    "observability",
    "cross-tests",
    "backup",
]

# Single source of truth for the product version.
#
# - Every workspace member (except `backup`, which has its own lifecycle)
#   inherits this via `version.workspace = true` in its own Cargo.toml.
# - `scripts/bump-version.sh <new-version>` rewrites this value and the
#   matching entries in charts/, packages/opencode-plugin/, admin-ui/ and
#   website/ in one atomic step.
# - `.github/workflows/version-consistency.yml` enforces that all those
#   surfaces agree on every PR and on every tag push.
[workspace.package]
version = "0.8.0-rc.4"

[workspace.lints.rust]
unused_imports = "warn"
dead_code = "allow"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin)', 'cfg(tarpaulin_include)'] }

[workspace.lints.rustdoc]
broken_intra_doc_links = "allow"
invalid_html_tags = "allow"
bare_urls = "allow"
redundant_explicit_links = "allow"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Allow these specific warnings - they are documentation-style issues that don't affect functionality
missing-panics-doc = "allow"
missing-errors-doc = "allow"
must-use-candidate = "allow"
doc-markdown = "allow"
collapsible-if = "allow"
collapsible-else-if = "allow"
unused-self = "allow"
assigning-clones = "allow"
unwrap-or-default = "allow"
match-same-arms = "allow"
too-many-arguments = "allow"
too-many-lines = "allow"
derivable-impls = "allow"
io-other-error = "allow"
manual-is-multiple-of = "allow"
manual-clamp = "allow"
unnecessary-get-then-check = "allow"
async-yields-async = "allow"
empty-line-after-outer-attr = "allow"
regex-creation-in-loops = "allow"
# Pedantic style/complexity/perf lints — accepted team-wide
cast-precision-loss = "allow"
cast-sign-loss = "allow"
cast-possible-wrap = "allow"
cast-possible-truncation = "allow"
cast-lossless = "allow"
float-cmp = "allow"
unreadable-literal = "allow"
uninlined-format-args = "allow"
similar-names = "allow"
struct-excessive-bools = "allow"
fn-params-excessive-bools = "allow"
needless-pass-by-value = "allow"
match-wildcard-for-single-variants = "allow"
implicit-hasher = "allow"
unnecessary-wraps = "allow"
option-if-let-else = "allow"
redundant-closure-for-method-calls = "allow"
redundant-else = "allow"
if-not-else = "allow"
unnecessary-debug-formatting = "allow"
field-reassign-with-default = "allow"
match-like-matches-macro = "allow"
map-unwrap-or = "allow"
items-after-statements = "allow"
module-name-repetitions = "allow"
single-match-else = "allow"
useless-let-if-seq = "allow"
manual-let-else = "allow"
wildcard-imports = "allow"
large-stack-arrays = "allow"
large-types-passed-by-value = "allow"
trivially-copy-pass-by-ref = "allow"
stable-sort-primitive = "allow"
inefficient-to-string = "allow"
from-iter-instead-of-collect = "allow"
redundant-pub-crate = "allow"
semicolon-if-nothing-returned = "allow"
ignored-unit-patterns = "allow"
useless-vec = "allow"
large-enum-variant = "allow"
type-complexity = "allow"
format-push-string = "allow"
redundant-pattern-matching = "allow"
needless-range-loop = "allow"
redundant-closure = "allow"
doc-lazy-continuation = "allow"
len-without-is-empty = "allow"
ptr-arg = "allow"
unused-async = "allow"
assertions-on-constants = "allow"
needless-raw-string-hashes = "allow"
no-effect-underscore-binding = "allow"
explicit-iter-loop = "allow"
explicit-into-iter-loop = "allow"
ref-option = "allow"
redundant-field-names = "allow"
return-self-not-must-use = "allow"
maybe-infinite-iter = "allow"
mismatching-type-param-order = "allow"
missing-fields-in-debug = "allow"
manual-string-new = "allow"
string-lit-as-bytes = "allow"
naive-bytecount = "allow"
ignore-without-reason = "allow"
# Additional style/perf lints to allow workspace-wide
needless-continue = "allow"
unnested-or-patterns = "allow"
needless-for-each = "allow"
used-underscore-binding = "allow"
inconsistent-struct-constructor = "allow"
unchecked-time-subtraction = "allow"
enum-glob-use = "allow"
doc-comment-double-space-linebreaks = "allow"
cloned-instead-of-copied = "allow"
manual-midpoint = "allow"
panic-in-result-fn = "allow"
elidable-lifetime-names = "allow"
needless-lifetimes = "allow"
module-inception = "allow"
manual-assert = "allow"
doc-overindented-list-items = "allow"
unnecessary-literal-bound = "allow"
needless-return = "allow"
result-large-err = "allow"
default-trait-access = "allow"
enum-variant-names = "allow"
case-sensitive-file-extension-comparisons = "allow"
single-char-pattern = "allow"
borrow-as-ptr = "allow"
struct-field-names = "allow"
format-collect = "allow"
format-in-format-args = "allow"
iter-cloned-collect = "allow"
needless-collect = "allow"
single-match = "allow"
redundant-clone = "allow"

[workspace.dependencies]
# Local workspace crates
mk_core = { path = "./mk_core" }
memory = { path = "./memory" }
knowledge = { path = "./knowledge" }
sync = { path = "./sync" }
tools = { path = "./tools" }
adapters = { path = "./adapters" }
storage = { path = "./storage" }
config = { path = "./config" }
utils = { path = "./utils" }
errors = { path = "./errors" }
context = { path = "./context" }
opal-fetcher = { path = "./opal-fetcher" }
agent-a2a = { path = "./agent-a2a" }
idp-sync = { path = "./idp-sync" }
observability = { path = "./observability" }
testing = { path = "./testing" }
aeterna-backup = { path = "./backup" }

# Shared dependencies across all crates
reqwest = { version = "0.13.1", features = ["json", "form", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.17"
anyhow = "1.0"
tokio = { version = "1.35", features = ["full"] }
uuid = { version = "1.6", features = ["serde", "v4"] }
sha2 = "0.11"
notify = "8.2.0"
tempfile = "3.9"
serde_yaml = "0.9"
toml = "1.1"
tracing = { version = "0.1", features = ["log"] }
validator = { version = "0.20.0", features = ["derive"] }
schemars = { version = "1.2.0", features = ["chrono04"] }
async-trait = "0.1"
zeroize = { version = "1.8", features = ["zeroize_derive"] }
wiremock = "0.6"
git2 = "0.20.3"
walkdir = "2.4"
strum = { version = "0.28", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
cedar-policy = "4.3"
utoipa = { version = "5.3", features = ["chrono", "uuid"] }
redis = { version = "1.0.2", features = ["tokio-comp", "json", "connection-manager"] }
regex = "1.10"
serial_test = "3.2"
testcontainers = "0.27"
testcontainers-modules = "0.15"
metrics = { version = "0.24.3" }
metrics-exporter-prometheus = { version = "0.18.1" }
metrics-util = { version = "0.20.1" }
metrics-opentelemetry = { version = "0.18.0" }
sqlx = { version = "0.9.0-alpha.1", features = ["postgres", "sqlite", "runtime-tokio", "tls-native-tls", "json", "uuid", "chrono"] }
distributed-lock = { version = "0.2", features = ["redis", "postgres"] }
xxhash-rust = { version = "0.8", features = ["xxh64"] }
octocrab = "0.49"
jsonwebtoken = { version = "10", features = ["use_pem"] }
hmac = "0.13"
dashmap = "6.1"
tokio-retry = "0.3"
backoff = { version = "0.4", features = ["tokio"] }
statig = { version = "0.4.1", features = ["async"] }
# A2A/Agent dependencies
radkit = "=0.0.5"
a2a-types = "0.2"
parking_lot = "0.12"
tokio-tungstenite = { version = "0.29", features = ["native-tls"] }
futures-util = "0.3"
# HTTP framework
axum = { version = "0.8", features = ["macros", "ws"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip", "request-id", "fs"] }
hyper = { version = "1.6", features = ["full"] }

[workspace.metadata.mutants]
timeout = 30
jobs = 4
