[package]
name = "adapters"
version = "0.1.0"
edition = "2024"
description = "Provider and ecosystem adapters"

[dependencies]
mk_core.workspace = true
utils.workspace = true
errors.workspace = true
tools.workspace = true
memory.workspace = true
knowledge.workspace = true
storage.workspace = true
sync.workspace = true
config.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
async-trait.workspace = true
cedar-policy.workspace = true

[dev-dependencies]
wiremock.workspace = true
