[package]
name = "agent-a2a"
version = "0.1.0"
edition = "2024"
description = "A2A (Agent-to-Agent) protocol implementation using Radkit"

[dependencies]
# Workspace dependencies
mk_core = { workspace = true }
memory = { workspace = true }
knowledge = { workspace = true }
storage = { workspace = true }
errors = { workspace = true }
context = { workspace = true }
utils = { workspace = true }

# A2A/Agent dependencies
radkit = { workspace = true }
a2a-types = { workspace = true }

# Shared dependencies
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
metrics = { workspace = true }
sqlx = { workspace = true }
tracing-subscriber = "0.3"

[dev-dependencies]
tokio-test = "0.4"
wiremock = { workspace = true }

[lints]
workspace = true
