[package]
name = "aeterna"
version = "0.1.0"
edition = "2024"
description = "Aeterna CLI - Universal Memory & Knowledge Framework"
license = "Apache-2.0"
keywords = ["aeterna", "memory", "knowledge", "cli"]

[[bin]]
name = "aeterna"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
mk_core.workspace = true
context.workspace = true
config.workspace = true
errors.workspace = true
storage.workspace = true

clap = { version = "4.5", features = ["derive", "env", "wrap_help"] }
clap_complete = "4.5"
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono.workspace = true
tokio.workspace = true
anyhow.workspace = true

colored = "3.0"
console = "0.15"
dialoguer = "0.11"
indicatif = "0.17"
dirs = "6.0"
regex = "1.11"

[dev-dependencies]
tempfile.workspace = true
assert_cmd = "2.0"
predicates = "3.1"
