[package]
name = "aeterna"
version = "0.7.0"
edition = "2024"
description = "Aeterna CLI - Universal Memory & Knowledge Framework"
license = "Apache-2.0"
keywords = ["aeterna", "memory", "knowledge", "cli"]

[[bin]]
name = "aeterna"
path = "src/main.rs"

[features]
default = []
vendored-openssl = ["openssl/vendored"]

[lints]
workspace = true

[dependencies]
openssl = { version = "0.10", optional = true }
mk_core.workspace = true
context.workspace = true
config.workspace = true
errors.workspace = true
utils.workspace = true
storage.workspace = true
memory = { workspace = true, features = ["llm-integration", "embedding-integration", "google-provider", "bedrock-provider"] }
knowledge.workspace = true
tools.workspace = true
sync.workspace = true
observability.workspace = true
agent-a2a.workspace = true
idp-sync.workspace = true
adapters.workspace = true
aeterna-backup.workspace = true

axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
hyper = { workspace = true }
sqlx.workspace = true

clap = { version = "4.5", features = ["derive", "env", "wrap_help"] }
clap_complete = "4.5"
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
toml.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono.workspace = true
tokio.workspace = true
anyhow.workspace = true
async-trait.workspace = true
uuid.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
futures-util.workspace = true
octocrab.workspace = true
jsonwebtoken.workspace = true
reqwest.workspace = true
redis.workspace = true
sha2.workspace = true
dashmap.workspace = true

colored = "3.0"
console = "0.15"
dialoguer = "0.11"
indicatif = "0.17"
dirs = "6.0"
regex = "1.11"

[dev-dependencies]
tempfile.workspace = true
serial_test.workspace = true
assert_cmd = "2.0"
predicates = "3.1"
testing.workspace = true
