[package]
name = "context"
version = "0.1.0"
edition = "2024"
description = "Context auto-resolution for Aeterna - git detection, env vars, context.toml"
license = "Apache-2.0"
keywords = ["aeterna", "context", "resolution"]

[lints]
workspace = true

[dependencies]
mk_core.workspace = true
config.workspace = true
errors.workspace = true

serde.workspace = true
serde_json.workspace = true
toml.workspace = true
git2.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true
uuid.workspace = true
reqwest.workspace = true
tokio.workspace = true
backoff.workspace = true

dirs = "6.0"

[dev-dependencies]
tempfile.workspace = true
wiremock.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
