[package]
name = "knowledge"
version = "0.1.0"
edition = "2024"
description = "Knowledge repository implementation"

[dependencies]
mk_core.workspace = true
utils.workspace = true
errors.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
async-trait.workspace = true
git2.workspace = true
walkdir.workspace = true
chrono.workspace = true
tempfile.workspace = true
regex.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
