[package]
name = "memory"
version = "0.1.0"
edition = "2024"
description = "Memory system implementation"

[dependencies]
mk_core.workspace = true
utils.workspace = true
config.workspace = true
errors.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
async-trait.workspace = true
chrono.workspace = true
qdrant-client = { version = "1.10", features = ["reqwest", "serde"] }
async-openai = "0.27"
aisdk = { version = "0.1", features = ["openai"] }
metrics-util = "0.15"
rand = "0.8"
lru = "0.12"
storage.workspace = true
opentelemetry = { version = "0.21", features = ["metrics", "trace"] }
opentelemetry_sdk = { version = "0.21", features = ["metrics", "trace"] }
prometheus = { version = "0.13" }
metrics = { version = "0.21" }
metrics-exporter-prometheus = { version = "0.12" }
regex = "1.12.2"

[dev-dependencies]
testcontainers = "0.26"
testcontainers-modules = { version = "0.14", features = ["postgres", "redis"] }
tokio-test = "0.4"
