[package]
name = "memory"
version = "0.1.0"
edition = "2024"
description = "Memory system implementation"

[dependencies]
mk_core.workspace = true
knowledge.workspace = true
utils.workspace = true
config.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
async-trait.workspace = true
chrono.workspace = true
qdrant-client = { version = "1.10", features = ["reqwest", "serde"] }
async-openai = { version = "0.32.4", optional = true, features = ["full"] }
aisdk = { version = "0.4.0", features = ["openai"], optional = true }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "json"], optional = true }
mongodb = { version = "3.2", optional = true }
reqwest = { version = "0.12", features = ["json"], optional = true }
urlencoding = "2.1"
uuid = { version = "1.0", features = ["v4", "v5", "serde"] }
metrics-util.workspace = true
rand = "0.8.5"
lru = "0.16.3"
storage.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
regex = "1.12.2"
sha2.workspace = true
hex = "0.4"
redis.workspace = true

[dev-dependencies]
testing.workspace = true
tempfile = "3.10"
proptest = "1.4"

[features]
default = []
llm-integration = ["dep:async-openai", "dep:aisdk"]
embedding-integration = ["dep:async-openai"]
pinecone = ["dep:reqwest"]
pgvector = ["dep:sqlx"]
vertex-ai = ["dep:reqwest"]
databricks = ["dep:reqwest"]
weaviate = ["dep:reqwest"]
mongodb = ["dep:mongodb"]
