[package]
name = "mk_core"
version = "0.1.0"
edition = "2024"
description = "Shared types and traits for the Memory-Knowledge system"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
utoipa.workspace = true
tokio.workspace = true
uuid.workspace = true
tracing.workspace = true
validator.workspace = true
schemars = { workspace = true, features = ["chrono"] }
async-trait.workspace = true
strum.workspace = true
chrono.workspace = true
regex.workspace = true
sha2 = "0.10"
hex = "0.4"
xxhash-rust.workspace = true
