[package]
name = "storage"
version = "0.1.0"
edition = "2024"
description = "Storage layer implementation"

[dependencies]
mk_core.workspace = true
utils.workspace = true
errors.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
async-trait.workspace = true
sqlx = { version = "0.9.0-alpha.1", features = ["runtime-tokio", "postgres", "chrono", "json"] }
redis.workspace = true
chrono = { version = "0.4", features = ["serde"] }
duckdb = { version = "1.3", features = ["bundled"] }
uuid.workspace = true
parking_lot = "0.12"

[dev-dependencies]
testcontainers = "0.26"
testcontainers-modules = { version = "0.14", features = ["postgres", "redis"] }
tokio-test = "0.4"
adapters.workspace = true
knowledge.workspace = true
config.workspace = true
