[package]
name = "storage"
version = "0.1.0"
edition = "2024"
description = "Storage layer implementation"

[dependencies]
mk_core.workspace = true
utils.workspace = true
errors.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
async-trait.workspace = true
sqlx = { version = "0.9.0-alpha.1", features = ["runtime-tokio", "postgres", "chrono", "json"] }
redis.workspace = true
chrono = { version = "0.4", features = ["serde"] }
duckdb = { version = "1.3", features = ["bundled"] }
uuid.workspace = true
parking_lot = "0.12"

# S3 persistence (Task 2.7, 6.1-6.6)
aws-sdk-s3 = "1.82"
aws-config = "1.6"
tokio-util = { version = "0.7", features = ["io"] }
bytes = "1.10"
sha2 = "0.10"
hex = "0.4"

# Metrics and observability (Task 8)
opentelemetry = { version = "0.21", features = ["metrics"] }
opentelemetry_sdk = { version = "0.21", features = ["rt-tokio"] }
metrics = "0.21"

[dev-dependencies]
testcontainers = "0.26"
testcontainers-modules = { version = "0.14", features = ["postgres", "redis", "minio"] }
tokio-test = "0.4"
adapters.workspace = true
knowledge.workspace = true
config.workspace = true
metrics-util = { version = "0.15", features = ["debugging"] }
wiremock.workspace = true
