[package]
name = "storage"
version = "0.1.0"
edition = "2024"
description = "Storage layer implementation"

[dependencies]
mk_core.workspace = true
utils.workspace = true
errors.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
async-trait.workspace = true
sqlx = { version = "0.9.0-alpha.1", features = ["runtime-tokio", "postgres", "chrono", "json", "uuid"] }
redis.workspace = true
chrono = { version = "0.4", features = ["serde"] }
duckdb = { version = "1.3", features = ["bundled"] }
uuid.workspace = true
parking_lot = "0.12"
git2.workspace = true
notify.workspace = true
cedar-policy.workspace = true
reqwest.workspace = true
tokio-retry.workspace = true

# S3 persistence (Task 2.7, 6.1-6.6)
aws-sdk-s3 = "1.82"
aws-config = "1.6"
tokio-util = { version = "0.7", features = ["io"] }
bytes = "1.10"
sha2 = "0.10"
hex = "0.4"

# Community detection (Phase 5)
rand = "0.8.5"

# Encryption and security (Phase 4)
aes-gcm = "0.10"
base64 = "0.22"
aws-sdk-kms = "1.57"

# Metrics and observability (Task 8)
metrics.workspace = true
statig.workspace = true

[dev-dependencies]
testing.workspace = true
tokio-test = "0.4"
adapters.workspace = true
knowledge.workspace = true
config.workspace = true
metrics-util.workspace = true
wiremock.workspace = true
anyhow.workspace = true
