[package]
name = "sync"
version = "0.1.0"
edition = "2024"
description = "Sync bridge implementation"

[dependencies]
mk_core.workspace = true
memory.workspace = true
knowledge.workspace = true
utils.workspace = true
errors.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
async-trait.workspace = true
chrono = { version = "0.4", features = ["serde"] }
metrics.workspace = true

[dev-dependencies]
tempfile = "3.10"
proptest = "1.4"
