[package]
name = "testing"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
testcontainers = { workspace = true }
testcontainers-modules = { version = "0.14", features = ["postgres", "redis"] }
tracing = { workspace = true }
redis = { workspace = true }
reqwest = { workspace = true }
anyhow = { workspace = true }
