[package]
name = "tools"
version = "0.1.0"
edition = "2024"
description = "MCP tool interface implementation"

[dependencies]
mk_core.workspace = true
memory.workspace = true
knowledge.workspace = true
sync.workspace = true
storage.workspace = true
utils.workspace = true
errors.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
tokio.workspace = true
tracing.workspace = true
async-trait.workspace = true
schemars.workspace = true
validator.workspace = true
chrono.workspace = true
tempfile.workspace = true
anyhow.workspace = true
redis.workspace = true
regex.workspace = true
flate2 = "1.0"
parking_lot = "0.12"
sha2.workspace = true
duckdb = { version = "1.3", features = ["bundled"] }

[dev-dependencies]
adapters = { path = "../adapters" }
config.workspace = true
storage.workspace = true
testing.workspace = true

[features]
default = []
llm-integration = []  # Enables tests requiring LLM services
embedding-integration = []  # Enables tests requiring embedding services

